# chess-shell

./: Cargo.toml  README.md
src/: board.rs  constants.rs  game.rs  lib.rs  main.rs  tui.rs  ui.rs  utils.rs
src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
